Fixed pokemon container div overflowing behind the footer.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -55,10 +55,13 @@
   text-decoration: none;
 }
 
+.footer img {
+  height: 2.5vh;
+}
+
 .main {
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: space-between;
   font-size: calc(10px + 2vmin);
   color: #282c34;
@@ -101,7 +104,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   color: #282c34;
   height: 80vh;
   flex: 5;
@@ -111,7 +113,7 @@
   display: flex;
   justify-content: space-around;
   width: 100%;
-  height: 100%;
+  height: 76.5vh;
   flex-wrap: wrap;
   overflow: scroll;
   overflow-x: hidden;
